# trialagent

./: .gitignore  README.md  pyproject.toml  run_with_hf.bat  run_with_hf.sh  setup_hf.bat  setup_hf.ps1  setup_hf.sh  setup_hf_jfrog.ps1
src/trialagent/agents/: __init__.py  clinical_supervisor.py
src/trialagent/scripts/: test_supervisor.py
