[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trialagent"
version = "0.1.0"
description = "A self-driving clinical laboratory."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alive-progress>=3.2.0",
    "altair>=5.5.0",
    "duckdb>=1.3.0",
    "formulaic>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.32",
    "tqdm>=4.67.1",
    "vega-datasets>=0.9.0",
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.20.0",
]

[[tool.uv.index]]
url = "https://v-ayushno_nat:PASSWORD@jfrog.apps.ocpdmzp.wclalit.org.il/artifactory/api/pypi/python/simple"
default = true

[tool.uv]
allow-insecure-host = ["jfrog.apps.ocpdmzp.wclalit.org.il"]

[project.scripts]
test-supervisor = "trialagent.scripts.test_supervisor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trialagent"]